--- a/contact.html
+++ b/contact.html
@@ -128,7 +128,7 @@
         <div id="article-column-1" class="article-column">
           <div id="article-1" class="hidden-article">
             <div id="researcher1-image" class="researcher-image">
-              <img src="/Images/Mr_Bean.jpg" />
+              <img src="./Images/Mr_Bean.jpg" />
             </div>
             <div id="researcher1-text">
               <div class="researcher-title">
@@ -152,7 +152,7 @@
           </div>
           <div id="article-2" class="hidden-article">
             <div id="researcher2-image" class="researcher-image">
-              <img src="/Images/Mr_Bean.jpg" />
+              <img src="./Images/Mr_Bean.jpg" />
             </div>
             <div id="researcher2-text">
               <div class="researcher-title">
@@ -182,7 +182,7 @@
         <div id="article-column-2" class="article-column">
           <div id="article-3" class="hidden-article">
             <div id="researcher3-image" class="researcher-image">
-              <img src="/Images/Mr_Bean.jpg" />
+              <img src="./Images/Mr_Bean.jpg" />
             </div>
             <div id="researcher3-text">
               <div class="researcher-title">
@@ -210,7 +210,7 @@
           </div>
           <div id="article-4" class="hidden-article">
             <div id="researcher4-image" class="researcher-image">
-              <img src="/Images/Mr_Bean.jpg" />
+              <img src="./Images/Mr_Bean.jpg" />
             </div>
             <div id="researcher4-text">
               <div class="researcher-title">
