--- a/about.html
+++ b/about.html
@@ -137,7 +137,7 @@
           <div id="article-column-1" class="article-column">
             <div id="article-1" class="hidden-article">
               <div id="researcher1-image" class="researcher-image">
-                <img src="/Images/Mr_Bean.jpg" />
+                <img src="./Images/Mr_Bean.jpg" />
               </div>
               <div id="researcher1-text">
                 <div class="researcher-title">
@@ -153,7 +153,7 @@
             </div>
             <div id="article-2" class="hidden-article">
               <div id="researcher2-image" class="researcher-image">
-                <img src="/Images/Mr_Bean.jpg" />
+                <img src="./Images/Mr_Bean.jpg" />
               </div>
               <div id="researcher2-text">
                 <div class="researcher-title">
@@ -171,7 +171,7 @@
           <div id="article-column-2" class="article-column">
             <div id="article-3" class="hidden-article">
               <div id="researcher3-image" class="researcher-image">
-                <img src="/Images/Mr_Bean.jpg" />
+                <img src="./Images/Mr_Bean.jpg" />
               </div>
               <div id="researcher3-text">
                 <div class="researcher-title">
@@ -187,7 +187,7 @@
             </div>
             <div id="article-4" class="hidden-article">
               <div id="researcher4-image" class="researcher-image">
-                <img src="/Images/Mr_Bean.jpg" />
+                <img src="./Images/Mr_Bean.jpg" />
               </div>
               <div id="researcher4-text">
                 <div class="researcher-title">
