--- a/about.html
+++ b/about.html
@@ -133,7 +133,22 @@
     <div class="article">
       <div class="article-background"></div>
       <div class="article-text">
+        <div class="article-container">
+          <hr class="hidden-article" />
+
+          <h2 class="container-title hidden-article">Connected Study</h2>
+          <div id="article-column-3" class="hidden-article">
+            <h3 class="article-title">GERONIMO</h3>
+            <p class="article-body">
+              sfgdtrvdkdbkfsdbkhsfdbhkvxjbfdskbhsvdbhkvxighugsfdbhjvxvchuesfbvcxhkeavbjvhufaebhk
+              vzdofae bcxvbhd ivfs vb vdb vds h fsv b vfui fsvougun svbs
+              vhsofufubx vuosdb xvsfof fxvbfgrerwsdzd
+            </p>
+          </div>
+        </div>
         <div class="article-column-container">
+          <hr class="hidden-article" />
+          <h2 class="container-title hidden-article">The Researchers</h2>
           <div id="article-column-1" class="article-column">
             <div id="article-1" class="hidden-article">
               <div id="researcher1-image" class="researcher-image">
@@ -203,17 +218,6 @@
                 </p>
               </div>
             </div>
-          </div>
-        </div>
-        <div class="article-container">
-          <hr class="hidden-article" />
-          <div id="article-column-3" class="hidden-article">
-            <h3 class="article-title">GERONIMO</h3>
-            <p class="article-body">
-              sfgdtrvdkdbkfsdbkhsfdbhkvxjbfdskbhsvdbhkvxighugsfdbhjvxvchuesfbvcxhkeavbjvhufaebhk
-              vzdofae bcxvbhd ivfs vb vdb vds h fsv b vfui fsvougun svbs
-              vhsofufubx vuosdb xvsfof fxvbfgrerwsdzd
-            </p>
           </div>
         </div>
       </div>
