Update all files

--- a/about.html
+++ b/about.html
@@ -71,6 +71,7 @@
             <a href="index.html" class="inactive-page">Home</a>
             <a href="about.html" class="active-page"> About </a>
             <a href="lessons.html" class="inactive-page">Lessons</a>
+            <a href="submit.html" class="inactive-page">Submit</a>
             <a href="contact.html" class="inactive-page">Contact</a>
           </div>
         </div>
@@ -89,9 +90,13 @@
           conducted by four student-researchers titled:
         </p>
         <p class="main-headline-body">
-          "DEVELOPMENT OF A STRATEGIC INTERVENTION MATERIAL (SIM) IN ADDRESSING
-          BASIC CALCULUS LEARNING DIFFICULTIES OF GRADE 11 STEM STUDENTS AT E.C.
-          BERNABE NATIONAL HIGH SCHOOL "
+          <strong
+            ><em>
+              "DEVELOPMENT OF A STRATEGIC INTERVENTION MATERIAL (SIM) IN
+              ADDRESSING BASIC CALCULUS LEARNING DIFFICULTIES OF GRADE 11 STEM
+              STUDENTS AT E.C. BERNABE NATIONAL HIGH SCHOOL"</em
+            ></strong
+          >
         </p>
         <p class="main-headline-body">
           Find more about the research they made and the researchers themselves
@@ -136,19 +141,27 @@
         <div class="article-container">
           <hr class="hidden-article" />
 
-          <h2 class="container-title hidden-article">Connected Study</h2>
+          <h2 class="container-title hidden-article">
+            <em>Connected Study</em>
+          </h2>
           <div id="article-column-3" class="hidden-article">
-            <h3 class="article-title">GERONIMO</h3>
+            <h3 class="article-title">
+              <em>
+                DEVELOPMENT OF A STRATEGIC INTERVENTION MATERIAL (SIM) IN
+                ADDRESSING BASIC CALCULUS LEARNING DIFFICULTIES OF GRADE 11 STEM
+                STUDENTS AT E.C. BERNABE NATIONAL HIGH SCHOOL</em
+              >
+            </h3>
             <p class="article-body">
-              sfgdtrvdkdbkfsdbkhsfdbhkvxjbfdskbhsvdbhkvxighugsfdbhjvxvchuesfbvcxhkeavbjvhufaebhk
-              vzdofae bcxvbhd ivfs vb vdb vds h fsv b vfui fsvougun svbs
-              vhsofufubx vuosdb xvsfof fxvbfgrerwsdzd
+              <strong> aqeqef</strong>
             </p>
           </div>
         </div>
         <div class="article-column-container">
           <hr class="hidden-article" />
-          <h2 class="container-title hidden-article">The Researchers</h2>
+          <h2 class="container-title hidden-article">
+            <em>The Researchers</em>
+          </h2>
           <div id="article-column-1" class="article-column">
             <div id="article-1" class="hidden-article">
               <div id="researcher1-image" class="researcher-image">
