--- a/index.html
+++ b/index.html
@@ -68,9 +68,10 @@
             <hr class="sidebar-bar" />
           </div>
           <div class="nav-buttons">
-            <a class="active-page"> Home </a>
+            <a href="index.html" class="active-page"> Home </a>
             <a href="about.html" class="inactive-page">About</a>
             <a href="lessons.html" class="inactive-page">Lessons</a>
+            <a href="submit.html" class="inactive-page">Submit</a>
             <a href="contact.html" class="inactive-page">Contact</a>
           </div>
         </div>
