--- a/contact.html
+++ b/contact.html
@@ -71,6 +71,7 @@
             <a href="index.html" class="inactive-page">Home</a>
             <a href="about.html" class="inactive-page"> About </a>
             <a href="lessons.html" class="inactive-page">Lessons</a>
+            <a href="submit.html" class="inactive-page">Submit</a>
             <a href="contact.html" class="active-page">Contact</a>
           </div>
         </div>
