--- a/submit.html
+++ b/submit.html
@@ -135,93 +135,93 @@
             Click the "Submit Answer Sheet" button when done.
           </p>
         </div>
-        <div id="article-2" class="hidden-article">
-          <form id="form" class="container m-4 pl-4">
-            <div class="hidden-article field">
-              <label class="label">NAME <em>(OPTIONAL)</em></label>
-              <div class="control">
-                <input
-                  class="input"
-                  type="text"
-                  placeholder="Optional"
-                  name="Student Name or Nickname"
-                />
-              </div>
-            </div>
-            <div class="hidden-article field">
-              <label class="label">SECTION</label>
-              <div class="control">
-                <input
-                  class="input"
-                  type="text"
-                  placeholder="11 STEM "
-                  name="Section"
-                />
-              </div>
-            </div>
-            <div class="hidden-article field">
-              <label class="label"
-                >STRATEGIC INTERVENTION MATERIAL (SIM) ANSWERED</label
-              >
-              <div class="control">
-                <input
-                  class="input"
-                  type="text"
-                  placeholder="SIM No. (1 - 10)"
-                  name="SIM No."
-                />
-              </div>
-            </div>
-            <div class="hidden-article field">
-              <label class="label">DATE OF SUBMISSION</label>
-              <div class="control">
-                <input
-                  class="input"
-                  type="date"
-                  placeholder="Date of Submission"
-                  name="DOS"
-                />
-              </div>
-            </div>
-            <div class="hidden-article field">
-              <label class="label">UPLOAD ANSWER SHEET</label>
-              <div class="control">
-                <div class="file has-name is-fullwidth">
-                  <label class="file-label">
-                    <input
-                      class="file-input"
-                      type="file"
-                      name="theFile"
-                      id="fileInput"
-                      accept="*/*"
-                    />
-                    <span class="file-cta">
-                      <span class="file-icon">
-                        <i class="fas fa-upload"></i>
-                      </span>
-                      <span class="file-label"> Choose a file… </span>
-                    </span>
-                    <span class="file-name" id="fileNameDisplay">
-                      No file selected
-                    </span>
-                  </label>
+        <div class="article-column">
+          <div id="article-2" class="hidden-article">
+            <form id="form" class="container m-4 pl-4">
+              <div class="hidden-article field">
+                <label class="label">NAME <em>(OPTIONAL)</em></label>
+                <div class="control">
+                  <input
+                    class="input"
+                    type="text"
+                    placeholder="Optional"
+                    name="Student Name"
+                  />
                 </div>
               </div>
-            </div>
-            <input type="hidden" name="filename" id="actualFilename" />
-            <div class="hidden-article field">
-              <label class="label">REMARKS <em>(OPTIONAL)</em></label>
-              <div class="control">
-                <textarea
-                  class="textarea"
-                  placeholder="Insert Your Remarks Here (Optional)"
-                  name="Notes"
-                ></textarea>
+              <div class="hidden-article field">
+                <label class="label">SECTION</label>
+                <div class="control">
+                  <input
+                    class="input"
+                    type="text"
+                    placeholder="11 STEM "
+                    name="Section"
+                  />
+                </div>
               </div>
-            </div>
-            <div class="hidden-article field is-grouped">
-              <div class="control">
-                <span id="button-reminder">
+              <div class="hidden-article field">
+                <label class="label"
+                  >STRATEGIC INTERVENTION MATERIAL (SIM) ANSWERED</label
+                >
+                <div class="control">
+                  <input
+                    class="input"
+                    type="text"
+                    placeholder="SIM No. (1 - 10)"
+                    name="SIM No."
+                  />
+                </div>
+              </div>
+              <div class="hidden-article field">
+                <label class="label">DATE OF SUBMISSION</label>
+                <div class="control">
+                  <input
+                    class="input"
+                    type="date"
+                    placeholder="Date of Submission"
+                    name="DOS"
+                  />
+                </div>
+              </div>
+              <div class="hidden-article field">
+                <label class="label">UPLOAD ANSWER SHEET</label>
+                <div class="control">
+                  <div class="file has-name is-fullwidth">
+                    <label class="file-label">
+                      <input
+                        class="file-input"
+                        type="file"
+                        name="theFile"
+                        id="fileInput"
+                        accept="*/*"
+                      />
+                      <span class="file-cta">
+                        <span class="file-icon">
+                          <i class="fas fa-upload"></i>
+                        </span>
+                        <span class="file-label"> Choose a file… </span>
+                      </span>
+                      <span class="file-name" id="fileNameDisplay">
+                        No file selected
+                      </span>
+                    </label>
+                  </div>
+                </div>
+              </div>
+              <input type="hidden" name="filename" id="actualFilename" />
+              <div class="hidden-article field">
+                <label class="label">REMARKS <em>(OPTIONAL)</em></label>
+                <div class="control">
+                  <textarea
+                    class="textarea"
+                    placeholder="Insert Your Remarks Here (Optional)"
+                    name="Notes"
+                  ></textarea>
+                </div>
+              </div>
+              <div class="hidden-article field is-grouped">
+                <div class="control">
                   <button
                     class="button is-primary"
                     type="submit"
@@ -229,25 +229,30 @@
                   >
                     Submit Answer Sheet
                   </button>
-
-                  <em>Once submitted, your answer sheet will be processed.</em>
-                </span>
+                  <br />
+                  <em id="button-reminder"
+                    >Once submitted, your answer sheet will be processed.</em
+                  >
+                </div>
+                <div class="control">
+                  <button
+                    class="button is-danger"
+                    type="button"
+                    onclick="
+                      document.getElementById('form').reset();
+                      document.getElementById('fileNameDisplay').textContent =
+                        'No file selected';
+                    "
+                  >
+                    Cancel
+                  </button>
+                </div>
               </div>
-              <div class="control">
-                <button
-                  class="button is-danger"
-                  type="button"
-                  onclick="
-                    document.getElementById('form').reset();
-                    document.getElementById('fileNameDisplay').textContent =
-                      'No file selected';
-                  "
-                >
-                  Cancel
-                </button>
-              </div>
-            </div>
-          </form>
+            </form>
+          </div>
+          <div id="article-3" class="hidden-article">
+            <table id="leaderboard" class="output"></table>
+          </div>
         </div>
       </div>
     </div>
