--- a/about.html
+++ b/about.html
@@ -16,6 +16,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CalcuLearn</title>
+    <link rel="icon" type="image/x-icon" href="./Images/CalcuLearn.png" />
     <link rel="stylesheet" href="about_style.css" />
     <script defer src="about.js"></script>
   </head>
@@ -153,7 +154,17 @@
               >
             </h3>
             <p class="article-body">
-              <strong> aqeqef</strong>
+              <br />
+              This study aims to develop and evaluate a Strategic Intervention
+              Material (SIM) in addressing the learning difficulties in Basic
+              Calculus among Grade 11 STEM students at E.C. Bernabe National
+              High School, particularly in terms of improving students’
+              understanding, performance, and engagement in the subject.
+              <br /><br />
+              <em
+                >In partial completement of the subject Inquiries,
+                Investigations, and Immersions (3Is)</em
+              >
             </p>
           </div>
         </div>
@@ -165,7 +176,7 @@
           <div id="article-column-1" class="article-column">
             <div id="article-1" class="hidden-article">
               <div id="researcher1-image" class="researcher-image">
-                <img src="./Images/Mr_Bean.jpg" />
+                <img src="./Researchers/Geronimo.png" />
               </div>
               <div id="researcher1-text">
                 <div class="researcher-title">
@@ -173,15 +184,13 @@
                   <h4 class="article-subtitle"><em>JAIRUS E</em></h4>
                 </div>
                 <p class="article-body">
-                  Lorem ipsum dolor sit amet consectetur adipiscing elit.
-                  Quisque faucibus ex sapien vitae pellentesque sem placerat. In
-                  id cursus mi pretium tellus duis convallis.
+                  Grade 12 STEM - A <br />Student Researcher
                 </p>
               </div>
             </div>
             <div id="article-2" class="hidden-article">
               <div id="researcher2-image" class="researcher-image">
-                <img src="./Images/Mr_Bean.jpg" />
+                <img src="./Researchers/Ignacio.png" />
               </div>
               <div id="researcher2-text">
                 <div class="researcher-title">
@@ -189,9 +198,7 @@
                   <h4 class="article-subtitle"><em>MARK ARCEL B</em></h4>
                 </div>
                 <p class="article-body">
-                  Lorem ipsum dolor sit amet consectetur adipiscing elit.
-                  Quisque faucibus ex sapien vitae pellentesque sem placerat. In
-                  id cursus mi pretium tellus duis convallis.
+                  Grade 12 STEM - A <br />Student Researcher
                 </p>
               </div>
             </div>
@@ -199,7 +206,7 @@
           <div id="article-column-2" class="article-column">
             <div id="article-3" class="hidden-article">
               <div id="researcher3-image" class="researcher-image">
-                <img src="./Images/Mr_Bean.jpg" />
+                <img src="./Researchers/Loyola.png" />
               </div>
               <div id="researcher3-text">
                 <div class="researcher-title">
@@ -207,15 +214,13 @@
                   <h4 class="article-subtitle"><em>ANDREI DANIEL T</em></h4>
                 </div>
                 <p class="article-body">
-                  Lorem ipsum dolor sit amet consectetur adipiscing elit.
-                  Quisque faucibus ex sapien vitae pellentesque sem placerat. In
-                  id cursus mi pretium tellus duis convallis.
+                  Grade 12 STEM - A <br />Student Researcher
                 </p>
               </div>
             </div>
             <div id="article-4" class="hidden-article">
               <div id="researcher4-image" class="researcher-image">
-                <img src="./Images/Mr_Bean.jpg" />
+                <img src="./Researchers/Magsino.png" />
               </div>
               <div id="researcher4-text">
                 <div class="researcher-title">
@@ -225,9 +230,7 @@
                   </h4>
                 </div>
                 <p class="article-body">
-                  Lorem ipsum dolor sit amet consectetur adipiscing elit.
-                  Quisque faucibus ex sapien vitae pellentesque sem placerat. In
-                  id cursus mi pretium tellus duis convallis.
+                  Grade 12 STEM - A <br />Student Researcher
                 </p>
               </div>
             </div>
