--- a/contact.html
+++ b/contact.html
@@ -16,6 +16,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CalcuLearn</title>
+    <link rel="icon" type="image/x-icon" href="./Images/CalcuLearn.png" />
     <link rel="stylesheet" href="contact_style.css" />
     <script defer src="contact.js"></script>
   </head>
@@ -129,7 +130,7 @@
         <div id="article-column-1" class="article-column">
           <div id="article-1" class="hidden-article">
             <div id="researcher1-image" class="researcher-image">
-              <img src="./Images/Mr_Bean.jpg" />
+              <img src="./Researchers/Geronimo.png" />
             </div>
             <div id="researcher1-text">
               <div class="researcher-title">
@@ -153,7 +154,7 @@
           </div>
           <div id="article-2" class="hidden-article">
             <div id="researcher2-image" class="researcher-image">
-              <img src="./Images/Mr_Bean.jpg" />
+              <img src="./Researchers/Ignacio.png" />
             </div>
             <div id="researcher2-text">
               <div class="researcher-title">
@@ -183,7 +184,7 @@
         <div id="article-column-2" class="article-column">
           <div id="article-3" class="hidden-article">
             <div id="researcher3-image" class="researcher-image">
-              <img src="./Images/Mr_Bean.jpg" />
+              <img src="./Researchers/Loyola.png" />
             </div>
             <div id="researcher3-text">
               <div class="researcher-title">
@@ -211,17 +212,17 @@
           </div>
           <div id="article-4" class="hidden-article">
             <div id="researcher4-image" class="researcher-image">
-              <img src="./Images/Mr_Bean.jpg" />
+              <img src="./Researchers/Magsino.png" />
             </div>
             <div id="researcher4-text">
               <div class="researcher-title">
                 <h3 class="article-title">
-                  <a href="https://www.facebook.com/andrei.d.loyola.3"
+                  <a href="https://www.facebook.com/seaneverickdeniel.magsino/"
                     >MAGSINO</a
                   >
                 </h3>
                 <h4 class="article-subtitle">
-                  <a href="https://www.facebook.com/andrei.d.loyola.3"
+                  <a href="https://www.facebook.com/seaneverickdeniel.magsino/"
                     >SEAN EVERICK DENIEL G</a
                   >
                 </h4>
