--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CalcuLearn</title>
+    <link rel="icon" type="image/x-icon" href="./Images/CalcuLearn.png" />
     <link rel="stylesheet" href="index_style.css" />
     <script defer src="index.js"></script>
   </head>
@@ -132,27 +133,22 @@
       <div class="article-background"></div>
       <div class="article-text">
         <div id="article-1" class="hidden-article">
-          <h3 class="article-title">LOREM IPSUM DOLOR SIT AMET</h3>
+          <h3 class="article-title">FROM STUDENTS FOR STUDENTS</h3>
           <p class="article-body">
-            Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque
-            faucibus ex sapien vitae pellentesque sem placerat. In id cursus mi
-            pretium tellus duis convallis.
-          </p>
-        </div>
-        <div id="article-2" class="hidden-article">
-          <h3 class="article-title">LOREM IPSUM DOLOR SIT AMET</h3>
-          <p class="article-body">
-            Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque
-            faucibus ex sapien vitae pellentesque sem placerat. In id cursus mi
-            pretium tellus duis convallis.
-          </p>
-        </div>
-        <div id="article-3" class="hidden-article">
-          <h3 class="article-title">LOREM IPSUM DOLOR SIT AMET</h3>
-          <p class="article-body">
-            Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque
-            faucibus ex sapien vitae pellentesque sem placerat. In id cursus mi
-            pretium tellus duis convallis.
+            Calculus is hard, we know how difficult to understand and memorize
+            like formula, derivation etc.
+            <br /><br />
+            So now we're here to show you what are the ways and strategies that
+            we used to make solving easier and at the same time were having fun.
+            <br /><br />
+            <strong>We made CalcuLearn just for you.</strong>
+            <br /><br />
+            CalcuLearn was made to introduce an easy and fun way to understand
+            the concepts of calculus.
+            <br /><br />
+            This material is designated for the Grade 11 STEM students of Emilio
+            C. Bernabe National High School to help them address their
+            difficulties in learning calculus.
           </p>
         </div>
       </div>
