--- a/lessons.html
+++ b/lessons.html
@@ -16,6 +16,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CalcuLearn</title>
+    <link rel="icon" type="image/x-icon" href="./Images/CalcuLearn.png" />
     <link rel="stylesheet" href="lessons_style.css" />
     <script defer src="lessons.js"></script>
   </head>
@@ -144,29 +145,29 @@
             <div class="article-body">
               <ul>
                 <li class="hidden-list">
-                  <a href="/Images/Mr_Bean.jpg" download=""
-                    >SIM I - [INSERT TITLE HERE]</a
+                  <a href="./SIMs/I SIM.pdf" download=""
+                    >SIM I - Introduction to Limits</a
                   >
                 </li>
               </ul>
               <ul>
                 <li class="hidden-list">
-                  <a href="/Images/Mr_Bean.jpg" download=""
-                    >SIM II - [INSERT TITLE HERE]</a
+                  <a href="./SIMs/II SIM.pdf" download=""
+                    >SIM II - Limits of Transendental Functions</a
                   >
                 </li>
               </ul>
               <ul>
                 <li class="hidden-list">
-                  <a href="/Images/Mr_Bean.jpg" download=""
-                    >SIM III - [INSERT TITLE HERE]</a
+                  <a href="./SIMs/III SIM.pdf" download=""
+                    >SIM III - Continuity of a Function</a
                   >
                 </li>
               </ul>
               <ul>
                 <li class="hidden-list">
-                  <a href="/Images/Mr_Bean.jpg" download=""
-                    >SIM IV - [INSERT TITLE HERE]</a
+                  <a href="./SIMs/IV SIM.pdf" download=""
+                    >SIM IV - Discontinuity of a Function</a
                   >
                 </li>
               </ul>
@@ -178,42 +179,42 @@
               <ul>
                 <li class="hidden-list">
                   <a href="/Images/Mr_Bean.jpg" download=""
-                    >SIM V - [INSERT TITLE HERE]</a
+                    >SIM V - Coming Soon :)</a
                   >
                 </li>
               </ul>
               <ul>
                 <li class="hidden-list">
                   <a href="/Images/Mr_Bean.jpg" download=""
-                    >SIM VI - [INSERT TITLE HERE]</a
+                    >SIM VI - Coming Soon :)</a
                   >
                 </li>
               </ul>
               <ul>
                 <li class="hidden-list">
                   <a href="/Images/Mr_Bean.jpg" download=""
-                    >SIM VII - [INSERT TITLE HERE]</a
+                    >SIM VII - Coming Soon :)</a
                   >
                 </li>
               </ul>
               <ul>
                 <li class="hidden-list">
                   <a href="/Images/Mr_Bean.jpg" download=""
-                    >SIM VIII - [INSERT TITLE HERE]</a
+                    >SIM VIII - Coming Soon :)</a
                   >
                 </li>
               </ul>
               <ul>
                 <li class="hidden-list">
                   <a href="/Images/Mr_Bean.jpg" download=""
-                    >SIM IX - [INSERT TITLE HERE]</a
+                    >SIM IX - Coming Soon :)</a
                   >
                 </li>
               </ul>
               <ul>
                 <li class="hidden-list">
                   <a href="/Images/Mr_Bean.jpg" download=""
-                    >SIM X - [INSERT TITLE HERE]</a
+                    >SIM X - Coming Soon :)</a
                   >
                 </li>
               </ul>
@@ -221,10 +222,12 @@
           </div>
         </div>
         <div id="article-2" class="hidden-article">
-          <h3 class="article-title">SUBMIT YOUR ANSWER SHEETS HERE</h3>
-          <button><a href="submit.html">SUBMIT</a></button>
-
-          <button><a href="submit.html">SUBMIT</a></button>
+          <div id="submission">
+            <h3 class="article-title">SUBMIT YOUR ANSWER SHEETS HERE</h3>
+            <button id="submit-button">
+              <a id="submit" href="submit.html">SUBMIT</a>
+            </button>
+          </div>
         </div>
       </div>
     </div>
