--- a/submit.html
+++ b/submit.html
@@ -133,7 +133,9 @@
           <p class="article-body">
             Answer all necessary fields and upload your answer sheet in PDF or
             image format. <br /><br />
-            Click the "Submit Answer Sheet" button when done.
+            Click the "Submit Answer Sheet" button when done.<br /><br />
+            <em>*Any and all information gathered from this website is purely for academic and research purposes, and will be treated with the utmost confidentiality.<br/>
+            **Once the study/experiment is done, you may wish to contact the research team (access thee "contact" page) for your data to be deleted.</em>
           </p>
         </div>
         <div class="article-column">
@@ -306,3 +308,4 @@
     </div>
   </body>
 </html>
+
