--- a/submit.html
+++ b/submit.html
@@ -135,7 +135,7 @@
             image format. <br /><br />
             Click the "Submit Answer Sheet" button when done.<br /><br />
             <em>*Any and all information gathered from this website is purely for academic and research purposes, and will be treated with the utmost confidentiality.<br/><br/>
-            **Once the study/experiment is done, you may wish to contact the research team (access the "contact" page) for your data to be deleted.</em>
+            **Once the study is done, all personal data will be deleted.</em>
           </p>
         </div>
         <div class="article-column">
